--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,15 +17,22 @@ body{
   padding: 0; }
 
 .friendList.active {
-  background-color: #efefef; }
+  background-color: #efefef;
+}
 
 .friendList {
   list-style: none;
-  padding-left: 0; }
+  padding-left: 0;
+}
+
 .friendList li.active {
-  background-color: #efefef; }
+  background-color: #efefef;
+}
+
 .friendList li:hover, .friendList li:active {
-  background-color: #eee; }
+  background-color: #eee;
+}
+
 .friendList li {
   -webkit-transition: background-color 1s;
   -moz-transition: background-color 1s;
@@ -39,7 +46,9 @@ body{
   padding: 0 15px;
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
+
 .friendList li img {
   vertical-align: middle;
   width: 40px;
@@ -89,15 +98,18 @@ body{
   left: -10px;
   border-right: 10px solid #cae9f2;
   border-top: 10px dashed transparent;
-  border-bottom: 10px dashed transparent; }
+  border-bottom: 10px dashed transparent;
+}
 
 .message.right .body {
   border-radius: 5px;
   float: right;
-  margin-right: 20px; }
+  margin-right: 20px;
+}
 
 .message.right img {
-  float: right; }
+  float: right;
+}
 
 .message.right .body:after {
   content: "";
@@ -109,24 +121,31 @@ body{
   right: -10px;
   border-left: 10px solid #cae9f2;
   border-top: 10px dashed transparent;
-  border-bottom: 10px dashed transparent; }
+  border-bottom: 10px dashed transparent;
+}
 
 .am-panel-bd.myUserInfo {
-  height: 90px;
-  padding: 10px; }
+  height: 60px;
+  padding: 10px;
+}
+
 .am-panel-bd.myUserInfo img {
   vertical-align: middle;
   width: 40px;
-  height: 40px; }
+  height: 40px;
+}
+
 .am-panel-bd.myUserInfo span {
-  color: red; }
+  color: red;
+}
 
 .input-cover {
   position: absolute;
   width: 48px;
   height: 37px;
   opacity: 0;
-  z-index: 2; }
+  z-index: 2;
+}
 
 #fileFormId input {
   display: inline;
@@ -134,10 +153,12 @@ body{
   height: 37px;
   position: absolute;
   opacity: 0;
-  z-index: 2; }
+  z-index: 2;
+}
 
 .emjoy-td-hover td:hover {
-  background-color: #e9e9e9; }
+  background-color: #e9e9e9;
+}
 
 .emjoyPanel {
   width: 202px;
@@ -145,16 +166,22 @@ body{
   box-shadow: none;
   position: absolute;
   top: 0;
-  margin-top: -150px; }
+  margin-top: -150px;
+}
+
 .emjoyPanel ul {
   border: none;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
+
 .emjoyPanel ul li {
   width: 100%;
   height: 100%;
   border-top: 1px solid #efefef;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
+
 .emjoyPanel ul li img {
   display: inline-block !important;
   width: 25px !important;
@@ -164,9 +191,12 @@ body{
   box-sizing: border-box;
   border-right: 1px solid #efefef;
   border-bottom: 1px solid #efefef;
-  cursor: pointer; }
+  cursor: pointer;
+}
+
 .emjoyPanel ul li img.isLeft {
-  border-left: 1px solid #efefef; }
+  border-left: 1px solid #efefef;
+}
 
 .w-h100px{
   width: 100px;
@@ -195,3 +225,172 @@ body{
   z-index: 99;
   opacity: 0;
 }
+
+.friend-left-nav{
+  position: absolute;
+  left:-60px;
+}
+
+#userTab .am-nav-tabs{
+  background-color: #0e90d2;
+}
+
+#userTab .am-nav-tabs li{
+  padding: 0
+}
+
+#userTab .am-nav-tabs>li>a{
+  color: #fff;
+  padding:.5rem 0 !important;
+}
+
+#userTab .am-nav-tabs li.am-active a{
+  color: #000;
+}
+
+#userTab .am-nav-tabs li:hover a{
+  color: #000;
+  background-color: #fff;
+}
+
+#userTab .am-tab-panel{
+  height: 500px;
+  overflow-x: hidden;
+  padding: 0;
+  background-color: #fff;
+}
+
+.groupList.active {
+  background-color: #efefef;
+}
+
+.groupList {
+  list-style: none;
+  padding-left: 0;
+}
+
+.groupList li.active {
+  background-color: #efefef;
+}
+
+.groupList li:hover, .groupList li:active {
+  background-color: #eee;
+}
+
+.groupList li {
+  -webkit-transition: background-color 1s;
+  -moz-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
+  transition: background-color 1s;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.groupList li img {
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+}
+
+.groupList.active {
+  background-color: #efefef;
+}
+
+.messageList {
+  list-style: none;
+  padding-left: 0;
+}
+
+.messageList li.active {
+  background-color: #efefef;
+}
+.messageList li:hover, .groupList li:active {
+  background-color: #eee;
+}
+
+.messageList li {
+  -webkit-transition: background-color 1s;
+  -moz-transition: background-color 1s;
+  -ms-transition: background-color 1s;
+  -o-transition: background-color 1s;
+  transition: background-color 1s;
+  border-bottom: 1px solid #eee;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  padding: 0 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.messageList li img {
+  vertical-align: middle;
+  width: 40px;
+  height: 40px;
+}
+
+.animate-up-to-down{
+  position:absolute;
+  animation:upToDown 1.5s infinite;
+  -webkit-animation:upToDown 1.5s infinite; /*Safari and Chrome*/
+}
+
+@-webkit-keyframes upToDown /*Safari and Chrome*/
+{
+  0%,100%{
+    top: 0;
+  }
+  15%{
+    top: -10px;
+  }
+  30%{
+    top: 0;
+  }
+  45%{
+    top: -6px;
+  }
+  60%{
+    top: 0;
+  }
+  75%{
+    top: -4px;
+  }
+}
+
+@keyframes upToDown {
+  0%,100%{
+    top: 0;
+  }
+  15%{
+    top: -10px;
+  }
+  30%{
+    top: 0;
+  }
+  45%{
+    top: -6px;
+  }
+  60%{
+    top: 0;
+  }
+  75%{
+    top: -4px;
+  }
+}
+
+.searchResult{
+  margin-top: 15px;
+}
+
+.searchResult img{
+  height: 40px;
+  width: 40px;
+}
+
