--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,6 +224,7 @@ body{
   width: 100px;
   z-index: 99;
   opacity: 0;
+  margin-top: 30px;
 }
 
 .friend-left-nav{
@@ -392,5 +393,13 @@ body{
 .searchResult img{
   height: 40px;
   width: 40px;
+}
+
+.mouseRightClick{
+  position: fixed;
+  z-index: 99999999;
+  left:0;
+  top:0;
+  display: none;
 }
 
