--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,9 @@
 
             <div class="am-tabs" data-am-tabs="{noSwipe: 1}" id="userTab">
                 <ul class="am-tabs-nav am-nav am-nav-tabs">
-                    <li class="am-active am-u-sm-4 am-text-center"><a href="javascript: void(0)">消息<span class="animate-up-to-down am-badge am-badge-danger am-round">6</span></a></li>
+                    <li class="am-active am-u-sm-4 am-text-center"><a href="javascript: void(0)">消息
+                            <!--<span class="animate-up-to-down am-badge am-badge-danger am-round">6</span>-->
+                        </a></li>
                     <li class="am-u-sm-4 am-text-center"><a href="javascript: void(0)">好友</a></li>
                     <li class="am-u-sm-4 am-text-center"><a href="javascript: void(0)">群组</a></li>
                 </ul>
